--- a/onboarding.specflow-master/MarsQA-1/MarsQA-1.csproj
+++ b/onboarding.specflow-master/MarsQA-1/MarsQA-1.csproj
@@ -165,6 +165,7 @@
     <Compile Include="SpecflowPages\Utils\Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FeaturefileSteps\_1RegisterSteps.cs" />
+    <Compile Include="FeaturefileSteps\_3ProfileSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Featurefiles\4ShareSkill.feature" />
@@ -175,6 +176,7 @@
     <None Include="Featurefiles\3Profile.feature" />
     <None Include="packages.config" />
     <None Include="SpecflowTests\Data\NewData.xlsx" />
+    <None Include="SpecflowTests\Data\ProfileData.xlsx" />
     <None Include="SpecflowTests\Data\ServiceListData.xlsx" />
   </ItemGroup>
   <ItemGroup>
